# BasaltOS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRACTS.md  LICENSE  NOTICE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.hal_bounds_esp32c3
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  core_bug.yml  core_feature.yml
.github/workflows/: configurator-ci.yml
apps/example.app/: app.toml  main.py
apps/flappy_bird.app/: app.toml  main.py
apps/lua_blink.app/: main.lua
apps/lua_fs_demo.app/: app.toml  main.lua
apps/lua_hello.app/: main.lua
apps/paint.app/: main.py
basalt_hal/: CMakeLists.txt
basalt_hal/include/hal/: hal_adc.h  hal_i2c.h  hal_i2s.h  hal_pwm.h  hal_rmt.h  hal_spi.h  hal_timer.h  hal_types.h
basalt_hal/ports/esp32/: hal_adc.c  hal_errno.h  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_pwm.c  hal_rmt.c  hal_spi.c  hal_timer.c  hal_uart.c
basalt_hal/ports/esp32c3/: hal_adc.c  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_pwm.c  hal_rmt.c  hal_spi.c  hal_timer.c  hal_uart.c
basalt_hal/ports/esp32c6/: hal_adc.c  hal_errno.h  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_pwm.c  hal_rmt.c  hal_spi.c  hal_timer.c  hal_uart.c
basalt_hal/ports/esp32h2/: hal_spi.c
basalt_hal/ports/esp32pico/: hal_i2s.c
basalt_hal/ports/esp32s2/: hal_i2c.c  hal_pwm.c  hal_rmt.c  hal_sys.c  hal_uart.c
basalt_hal/ports/esp32s3/: hal_adc.c  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_pwm.c  hal_rmt.c  hal_spi.c  hal_timer.c  hal_uart.c
basalt_hal/ports/esp8266/: hal_gpio.c
basalt_hal/ports/pic16/: hal_gpio.c  hal_i2c.c  hal_sys.c  hal_uart.c
basalt_hal/ports/ra4m1/: hal_adc.c  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_pwm.c  hal_rmt.c  hal_spi.c  hal_timer.c  hal_uart.c
basalt_hal/ports/rp2040/: hal_adc.c  hal_gpio.c  hal_i2c.c  hal_timer.c  hal_uart.c
basalt_hal/ports/stm32/: hal_gpio.c  hal_i2c.c  hal_uart.c
boards/: README.md
boards/esp32-cam/: README.md
boards/esp32-cyd/: sdkconfig.defaults
config/: market_apps.json
config/profiles/: README.md  cyd_quickstart.json  esp32_c6_quickstart.json  mega2560_quickstart.json
config/templates/: project_templates.json
dev/apps_dev/: .gitignore
docs/: ADS1115_HARDWARE_VERIFICATION.md  API_STABLE_V1.md  BOARD_CATALOG.md  BOARD_ONBOARDING_CHECKLIST.md  BOARD_TAXONOMY_API_CONTRACT.md  BOARD_TAXONOMY_INDEX.csv  BOARD_TAXONOMY_INDEX.json  BOARD_VALIDATION_BATCH_2026-02-11.md  BasaltOS.ods  BasaltOS_Roadmap.docx  CLI_FOUNDATION_QUICKSTART.md  DHT22_HARDWARE_VALIDATION.md  DHT_COMPATIBILITY_POLICY.md  ESP32_FIRST_SUCCESS_10_MIN.md  EXAMPLES_PACK_RECIPES.md  GUEST_SYNC_CONTRACT.md  HERO_BOARD_QUICKSTARTS.md  L298N_ULN2003_HARDWARE_VALIDATION.md  LOCAL_DATA_WORKSPACE.md  LUA_RUNTIME_ESP32C6_BENCH_VALIDATION.md  MCP2515_HARDWARE_VERIFICATION.md  NEXT_DRIVER_INTAKE.md  PLATFORMIO_PHASE1_KICKOFF.md  RELEASE_SYNC_CHECKLIST.md  RELEASE_SYNC_STATUS.md  ROADMAP_2026_H1.md  S2_CLI_RELIABILITY_MATRIX.md  SSD1306_HARDWARE_VALIDATION.md  TP4056_HARDWARE_VALIDATION.md  V0_1_ACCEPTANCE_CHECKLIST.md  V0_1_TOP10_GAPS.md  V0_2_SCOPE_BOUNDARIES.md  api-basalt.md  boards.md  cli-bsh.md  dev-internal.md  runtime-micropython.md  runtime-multi-runtime.md  spec-v0.1.md  third-party-app-dev.md
docs/GPIO_Maps/: ESP32_CYD.ods
docs/planning/: BOARD_INTAKE_TEMPLATE.md  DRIVER_CAPABILITY_GAPS.json  DRIVER_CAPABILITY_GAPS.md  DRIVER_CAPABILITY_MATRIX.csv  DRIVER_CAPABILITY_MATRIX.json  DRIVER_CAPABILITY_MATRIX.md  DRIVER_HAL_DEPENDENCY_MAP.json  DRIVER_HAL_DEPENDENCY_MAP.md  EEPROM_CAPABILITY_POSTURE.json  EEPROM_CAPABILITY_POSTURE.md  FLEX_PRIORITY_QUEUE_2026-02-10.md  GENERATION_PARITY_BASELINE.json  GENERATION_PARITY_BASELINE.md  HAL_ADAPTER_MATRIX.csv  HAL_ADAPTER_MATRIX.json  HAL_ADAPTER_MATRIX.md  HAL_CONTRACT_POLICY.json  HAL_CONTRACT_POLICY.md  HAL_PLATFORM_ADAPTER_COMPLETENESS.json  HAL_PLATFORM_ADAPTER_COMPLETENESS.md  HAL_PORT_MATURITY_REPORT.json  HAL_PORT_MATURITY_REPORT.md  HAL_RELEASE_CANDIDATE_2026-02-23.md  HAL_RELEASE_GRADUATION_2026-02-23.md  HAL_RUNTIME_CONTRACT_POLICY.json  HAL_RUNTIME_CONTRACT_POLICY.md  HAL_RUNTIME_CONTRACT_REPORT.json  HAL_RUNTIME_CONTRACT_REPORT.md  HAL_STABILIZATION_BENCH_2026-02-23.md  HAL_UNSUPPORTED_STUB_INVENTORY.json  HAL_UNSUPPORTED_STUB_INVENTORY.md  (+27 more)
jira/: .gitignore  README.md
main/: CMakeLists.txt  app_main.c  bus_manager.c  bus_manager.h  lua_runtime.c  lua_runtime.h  mpy_runtime.c  mpy_runtime.h  runtime_dispatch.c  runtime_dispatch.h  smoke_test.c  smoke_test.h  tft_console.c  tft_console.h
runtime/: runtime_api.h
runtime/python/micropython_embed/: CMakeLists.txt  mpconfigport.h
runtime/python/micropython_embed/genhdr/: moduledefs.h  mpversion.h  qstrdefs.generated.h
runtime/python/micropython_embed/port/: board_config.h  embed_util.c  modbasalt.c  modui.c  modui.h
spiffs/: hello.py
targets/: atmega328p.json  atmega32u4.json  linux_sbc_generic.json  mega2560.json  pic16f13145.json  pic16f873.json  ra4m1.json  rp2040_generic.json  rx65n.json  samd21g18.json  stm32f4_generic.json
tools/: CONFIGURATOR_README.md  README.md  app_validation.py  avr_codegen.py  basaltos_config_gui.html  basaltos_config_server.py  board.sh  board_intake_scaffold.py  build.sh  configurator_polish_loop.sh  configure.py  diff_local_sync_payload.py  env.sh  export_local_sync_payload.py  flash.sh  gen_mpy_embed.sh  generate_board_catalog.py  generate_driver_capability_matrix.py  generate_driver_hal_dependency_map.py  generate_eeprom_posture_report.py  generate_generation_parity_baseline.py  generate_hal_adapter_matrix.py  generate_hal_maturity_report.py  generate_hal_platform_adapter_completeness.py  generate_hal_runtime_contract_report.py  generate_hal_unsupported_stub_inventory.py  generate_manufacturer_matrix.py  generate_mcp2544fd_posture_report.py  generate_non_esp_runtime_bench_matrix.py  generate_psram_posture_report.py  generate_tft_posture_report.py  generate_tp4056_posture_report.py  generate_twai_posture_report.py  import_local_sync_payload.py  local_data_migrate.py  metadata_completeness_report.py  monitor.sh  new_app.py  open_configurator_url.sh  pack_app.py  (+8 more)
(+277 files in other folders)
